HBase Change Log
Release 0.19.3 - Unreleased
  BUG FIXES
   HBASE-1413  fall back to filesystem block size default if
               hbase.regionserver.hlog.blocksize is not specified
   HBASE-1344  WARN IllegalStateException: Cannot set a region as open if
               it has not been pending
   HBASE-1362  .META. may not come back if regionserver crashes
               (Nitay Joffe via Stack)

  IMPROVEMENTS
   HBASE-1418  Transacitonal improvments and fixes (Clint Morgan via Stack)
   HBASE-1424  have shell print regioninfo and location on first load if
               DEBUG enabled
   HBASE-1008  [performance] The replay of logs on server crash takes way too long
   HBASE-1401  close HLog (and open new one) if there hasnt been edits in
               N minutes/hours

Release 0.19.2 - May 9th, 2009 
  BUG FIXES
   HBASE-1303  Secondary index configuration prevents HBase from starting
               (Ken Weiner via Stack)
   HBASE-1202  getRow does not always work when specifying number of versions
   HBASE-1319  Bug in atomicIncrement 0.19.1 only (Ryan Rawson via Stack)
   HBASE-1301  HTable.getRow() returns null if the row does no exist
               (Rong-en Fan via Stack)
   HBASE-1292  php thrift's getRow() would throw an exception if the row does
               not exist (Rong-en Fan via Stack)
   HBASE-1287  Partitioner class not used in TableMapReduceUtil.initTableReduceJob()
               (Lars George and Billy Pearson via Stack)
   HBASE-1350  New method in HTable.java to return start and end keys for
               regions in a table (Vimal Mathew via Stack)
   HBASE-1058  Prevent runaway compactions
   HBASE-1347  HTable.incrementColumnValue does not take negative 'amount'
               (Evgeny Ryabitskiy via Stack)
   HBASE-1365  Typo in TableInputFormatBase.setInputColums (Jon Gray via Stack)
   HBASE-1318  Thrift server doesnt know about atomicIncrement
               (Ryan Rawson via Stack)
   HBASE-1352  incrementColumnValue/Memcache bug